fixed YMap when covered

--- a/src/components/Sidebar/BurgerMenu/style.scss
+++ b/src/components/Sidebar/BurgerMenu/style.scss
@@ -18,7 +18,7 @@
 
 .sidebar__burger {
     display: block;
-    z-index: 2;
+    z-index: 5;
     position: relative;
     cursor: pointer;
     width: 32px;
