--- a/src/components/Sidebar/Menu/style.scss
+++ b/src/components/Sidebar/Menu/style.scss
@@ -13,7 +13,7 @@
 }
 
 .dropdown {
-    z-index: 1;
+    z-index: 4;
     display: flex;
     position: fixed;
     top: 0;
