--- a/src/pages/OrderPage/OrderPageContent/OrderProcess/OrderProcessContent/LocationStepContainer/LocationStep/style.scss
+++ b/src/pages/OrderPage/OrderPageContent/OrderProcess/OrderProcessContent/LocationStepContainer/LocationStep/style.scss
@@ -32,6 +32,10 @@
         .location-step__map {
             height: 352px;
             width: 736px;
+
+            > ymaps {
+                z-index: -10;
+            }
         }
     }
 }
